section-6-ingress/admin.yaml
apiVersion: v1
kind: Pod
metadata:
 name: admin
 labels:
  app: admin
spec:
 containers:
  - name: admin
    image: ealen/echo-server
    resources:
     requests:
      cpu: "100m"
      memory: "64Mi"
     limits:
      cpu: "400m"
      memory: "128Mi"
    ports:
     - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: admin
spec:
 selector:
  app: admin
 ports:
  - protocol: TCP
    port: 80
    targetPort: 80
