section-6-ingress/backend.yaml
apiVersion: v1
kind: Pod
metadata:
 name: backend
 labels:
  app: backend
spec:
 containers:
  - name: backend
    image: ealen/echo-server
    resources:
     requests:
      cpu: "100m"
      memory: "64Mi"
     limits:
      cpu: "400m"
      memory: "128Mi"
    ports:
     - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: backend
spec:
 selector:
  app: backend
 ports:
  - protocol: TCP
    port: 80
    targetPort: 80
