section-6-ingress/frontend.yaml
# www.yaml
apiVersion: v1
kind: Pod
metadata:
 name: frontend
 labels:
  app: frontend
spec:
 containers:
  - name: frontend
    image: nginx
    resources:
     requests:
      cpu: "100m"
      memory: "64Mi"
     limits:
      cpu: "400m"
      memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
 name: frontend
spec:
 selector:
  app: frontend
 ports:
  - protocol: TCP
    port: 80
    targetPort: 80
