section-6-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress

spec:
 ingressClassName: nginx
 tls:
  - hosts:
     - www.example.com
     - api.example.com
    secretName: example-tls-secret
 rules:
  - host: www.example.com
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: frontend
          port:
           number: 80
      - path: /admin
        pathType: Exact
        backend:
         service:
          name: admin
          port:
           number: 80
  - host: api.example.com
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: backend
          port:
           number: 80
